crates/node-depman/tests/snapshots/shims_test__npm__creates_global_shims-2.snap
---
source: crates/node-depman/tests/shims_test.rs
expression: "std::fs::read_to_string(sandbox.path().join(\".proto/shims\").join(if cfg!(windows)\n                    {\n                    format!(\"{}.cmd\", \"npx\")\n                } else { \"npx\".to_string() })).unwrap()"
---
#!/usr/bin/env bash
set -e

if [ -n "$PROTO_DEBUG" ]; then
    set -x
    echo "Running with npm-test.sh shim"
fi

exec proto run npm-test --alt "npx" --  "$@" 

