crates/node-depman/tests/snapshots/shims_test__npm__creates_global_shims.snap
---
source: crates/node-depman/tests/shims_test.rs
expression: "std::fs::read_to_string(sandbox.path().join(\".proto/shims\").join(if cfg!(windows)\n                    {\n                    format!(\"{}.cmd\", \"npm-test\")\n                } else { \"npm-test\".to_string() })).unwrap()"
---
#!/usr/bin/env bash
set -e
[ -n "$PROTO_DEBUG" ] && set -x


exec proto run npm-test --  "$@" 


